--- a/views/login.templ
+++ b/views/login.templ
@@ -17,11 +17,11 @@ templ Login() {
                     <form hx-post="/login" hx-swap="outerHTML" hx-target="body">
                         <div class="mb-5">
                             <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
-                            <input type="email" id="email" class="w-full px-3 py-2 border rounded-md text-gray-700" required />
+                            <input type="email" name="email" id="email" class="w-full px-3 py-2 border rounded-md text-gray-700" required />
                         </div>
                         <div class="mb-5">
                             <label for="password" class="block mb-2 text-sm text-gray-600">Password</label>
-                            <input type="password" id="password" class="w-full px-3 py-2 border rounded-md text-gray-700" required />
+                            <input type="password" name="password" id="password" class="w-full px-3 py-2 border rounded-md text-gray-700" required />
                         </div>
                         <button type="submit" class="w-full py-2 px-4 bg-blue-600 hover:bg-blue-700 rounded-md text-white text-sm">Submit</button>
                     </form>
