--- a/views/dashboard.templ
+++ b/views/dashboard.templ
@@ -1,14 +1,13 @@
 package views
 
 import (
-	"github.com/alessandrolattao/htmx/components"
 	"github.com/labstack/echo/v4"
-	"github.com/alessandrolattao/htmx/helpers"
+	"github.com/alessandrolattao/htmx/components"
+	"github.com/alessandrolattao/htmx/pages"
 )
 
-
 templ Dashboard(c echo.Context) {
-    <!DOCTYPE html>
+	<!DOCTYPE html>
 	<html lang="en">
 		<head>
 			<meta charset="UTF-8" />
@@ -18,9 +17,36 @@ templ Dashboard(c echo.Context) {
 			<script src="https://cdn.tailwindcss.com"></script>
 		</head>
 		<body>
-            <div class="bg-purple-500 flex items-center justify-center h-screen">
-                @components.Hello(helpers.GetCookieValue(c, "email"))
-            </div>
+			<button data-drawer-target="cta-button-sidebar" data-drawer-toggle="cta-button-sidebar" aria-controls="cta-button-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+				<span class="sr-only">Open sidebar</span>
+				<svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+					<path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
+				</svg>
+			</button>
+
+			<aside id="cta-button-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
+				<div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-900">
+					<ul class="space-y-2 font-medium">
+						@components.NavItemGet("Dashboard", "/pages/dashboard", "innerHTML", "#page") {
+							<path d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z"/>
+							<path d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"/>
+						}
+						@components.NavItemGet("Page 1", "/pages/page1", "innerHTML", "#page") {
+							<path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2ZM7.99 9a1 1 0 0 1 1-1H9a1 1 0 0 1 0 2h-.01a1 1 0 0 1-1-1ZM14 9a1 1 0 0 1 1-1h.01a1 1 0 1 1 0 2H15a1 1 0 0 1-1-1Zm-5.506 7.216A5.5 5.5 0 0 1 6.6 13h10.81a5.5 5.5 0 0 1-8.916 3.216Z" clip-rule="evenodd"/>
+						}
+						@components.NavItemGet("Page 2", "/pages/page2", "innerHTML", "#page") {
+							<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.484 9.166 15 7h5m0 0-3-3m3 3-3 3M4 17h4l1.577-2.253M4 7h4l7 10h5m0 0-3 3m3-3-3-3"/>
+						}
+						@components.NavItemPost("Logout", "/logout", "outerHTML", "body") {
+							<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H8m12 0-4 4m4-4-4-4M9 4H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h2"/>
+						}
+					</ul>
+				</div>
+			</aside>
+
+			<div class="p-4 sm:ml-64" id="page">
+				@pages.Dashboard()
+			</div>
         </body>
     </html>
 }
