switch back to big component

--- a/pages/page1.templ
+++ b/pages/page1.templ
@@ -8,6 +8,6 @@ templ Page1() {
         @components.Small()
         @components.Small()
     </div>
-    @components.Big2()
+    @components.Big()
     @components.Big()
 }
